# bevy_skybox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/: sky.frag  sky.vert
bevy_fly_camera-master/: Cargo.toml
bevy_fly_camera-master/bevy-0.7.0/crates/bevy_render/src/renderer/: mod.rs
docs/: measuring_the_net.drawio
examples/: basic.rs  board_flyover.rs  props.rs
src/: image.rs  lib.rs  material.rs
