[package]
name = "bevy_skybox"
description = "A skybox from an image for bevyengine.org"
categories = ["game-development"]
keywords = ["bevy", "skybox", "gamedev", "graphics"]
version = "0.6.0"
authors = ["Jonathan Lawn <Jonathan.M.Lawn@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bevy_skybox/"
repository = "https://github.com/jomala/bevy_skybox/"
edition = "2021"
include = ["src/**/*", "README.md", "CHANGELOG.md", "assets/*.vert", "assets/*.frag"]

[dependencies]
bevy = "0.15"
image = "0.25"
itertools = "0.14"

[dev-dependencies]
bevy_fly_camera = "0.10"
bevy_log = "0.15"
rand = "0.9"
